--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,41 +1,7 @@
+<!-- Not in use at 14/10/07-->
 <div style="width:600px;">
-    Ispick is an automatic anime artworks aggregator.<br />
-  <br />
-    Not only you can search images in the database, but also you can create image feeds based on certain text tags. Currently there is a lot of anime artwork related sites, and most of artworks in them remain unseen. For now, this problem is partly solved by manual aggregating taken place on websites like Tumblr / Pinterest. <br />
-  <br />
-    However. over the long term we believe we can help you more by providing our automated system, as Google did years ago. For now it only supports image search by limited text tags, but we're planning to implement image search based on image, using deep neural networks.
-  Our goal is "Letting people see anime artworks they like automatically", and our mission is "To solve problems and improve the world by intelligent, automated systems".<br />
-  <br />
-    Since we are at the very first stage and the system need to be adjusted or changed a lot, we've decided that we continue improving this site with your feedbacks.<br />
-  So please feel free to send us yours! Thank you for reading this.<br />
-  <br />
+  <%= render partial: 'shared/about_us' %>
 
-  <%= form_for @message, :url => create_contact_path do |form| %>
-  <fieldset class="fields">
-    <div class="field">
-      <%= form.label :name %>
-      <%= form.text_field :name %>
-    </div>
-
-    <div class="field">
-      <%= form.label :email %>
-      <%= form.text_field :email %>
-    </div>
-    <div class="field">
-      <%= form.label :subject %>
-      <%= form.text_field :subject %>
-    </div>
-
-    <div class="field">
-      <%= form.label :body %>
-      <%= form.text_area :body %>
-    </div>
-  </fieldset>
-
-  <fieldset class="actions">
-    <%= form.submit "Send" %>
-  </fieldset>
-<% end %>
   blog: ispick.tumblr.com<br />
   email: ispic6"at mark"gmail.com<br />
   twitter: @ispic6
